# agent_platform

./: .gitignore  README.md
agent-platform-mono/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  main.py  pyproject.toml
agent-platform-mono/agent_service/agents/: registry.py
agent-platform-mono/agent_service/workflows/: base_agent.py
agent-platform-mono/app/gateway/: app.py  error_handlers.py  lifespan.py  readiness.py
agent-platform-mono/apps/: __init__.py
agent-platform-mono/apps/claim/: claim_agent.py  register.py
agent-platform-mono/apps/customer/: register.py
agent-platform-mono/apps/policy/: memory_config.py  register.py
agent-platform-mono/core/agent_engine/: mode_selector.py  orchestrator_factory.py  subagent_aggregation_params.py  subagent_aggregator.py  subagent_gateway.py  subagent_planner_gateway.py  subagent_planner_provider.py  subagent_planner_provider_protocols.py
agent-platform-mono/core/memory_rag/: __init__.py
agent-platform-mono/core/tool_service/: README.md  __init__.py  registry.py  router.py  types.py
agent-platform-mono/docs/: Core层架构演进规划_基于DeerFlow借鉴.md  agent_engine.md  ai_core.md  memory-最小可落地改造任务清单.md  memory_rag.md  tool_service.md  动态编排-双模式设计稿.md
agent-platform-mono/docs/architecture/: README.md  pdf_parsing_design.md  tool_service_architecture.md
agent-platform-mono/docs/refactoring/: README.md  mcp_client_rename.md  remove_unused_mcp_clients.md  tool_location_and_registration.md  tool_organization.md  tool_service_client_cleanup.md
agent-platform-mono/docs/tasks/: README.md  batch1_infrastructure.md  batch1_review.md  batch2_tool_service.md  batch3_ai_capabilities.md  batch4_observability.md  batch5_memory_enhancement.md  dependency_graph.md  task1.3_deferred.md
agent-platform-mono/docs/归档/: ai_core-LiteLLM迁移任务清单.md  动态编排-双模式设计稿.md  消息过滤和压缩.md
agent-platform-mono/domain_agents/claim/: claim_agent.py  memory_config.py  register.py
agent-platform-mono/domain_agents/customer/: memory_config.py  register.py
agent-platform-mono/domain_agents/policy/: register.py
agent-platform-mono/domains/claim/: claim_agent.py  memory_config.py  register.py
agent-platform-mono/domains/customer/: memory_config.py  register.py
agent-platform-mono/domains/policy/: memory_config.py  register.py
agent-platform-mono/shared/config/: nacos.py  settings.py
agent-platform-mono/shared/fastapi_utils/: __init__.py  error_handlers.py  health.py
agent-platform-mono/shared/i18n/: __init__.py  locale.py  timezone.py  translator.py
agent-platform-mono/shared/internal_http/: __init__.py  client.py
agent-platform-mono/shared/logging/: logger.py
agent-platform-mono/shared/middleware/: tenant.py
agent-platform-mono/shared/models/: schemas.py
agent-platform-mono/shared/observability/: metrics_gateway.py
agent-platform-mono/tests/: test_architecture_boundary.py  test_main.py
agent-platform-mono/tests/agent_service/: test_registry.py
agent-platform-mono/tests/apps/: test_claim.py  test_policy.py
agent-platform-mono/tests/domains/: test_claim.py  test_policy.py
agent-platform-mono/tests/memory/: test_filters_compressor.py  test_manager.py
agent-platform-mono/tests/shared/: test_i18n.py  test_tenant_middleware.py
agent-platform-repos/agent-service/: .env.example  Dockerfile  main.py  pyproject.toml
agent-platform-repos/agent-service/agents/: registry.py
agent-platform-repos/agent-service/checkpoints/: redis_checkpoint.py
agent-platform-repos/agent-service/clients/: ai_core_client.py  mcp_client.py  memory_rag_client.py
agent-platform-repos/agent-service/config/: settings.py
agent-platform-repos/agent-service/domains/: __init__.py
agent-platform-repos/agent-service/tests/: test_agent_api.py
agent-platform-repos/agent-service/workflows/: base_agent.py
agent-platform-repos/mcp-service/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
agent-platform-repos/mcp-service/client/: gateway.py
agent-platform-repos/mcp-service/config/: settings.py
agent-platform-repos/mcp-service/tests/: test_tools.py
agent-platform-repos/mcp-service/tools/: __init__.py  claim_tools.py  customer_tools.py  policy_tools.py
agent-platform-repos/memory-rag-service/: .env.example  Dockerfile  main.py  pyproject.toml
agent-platform-repos/memory-rag-service/config/: settings.py
agent-platform-repos/memory-rag-service/embedding/: service.py
agent-platform-repos/shared-lib/: pyproject.toml
(+136 files in other folders)
