[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-platform"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langgraph-checkpoint-redis>=0.1.0",

    # LLM unified proxy (100+ models, transparent switching)
    "litellm>=1.50.0",

    # MCP protocol (official Anthropic SDK)
    "mcp>=1.0.0",

    # Memory management
    "mem0ai>=0.1.0",

    # Vector DB clients
    "pymilvus>=2.4.0",
    "qdrant-client>=1.11.0",

    # Local embedding & rerank (data stays on-prem)
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.2.0",

    # Observability (self-hosted Langfuse)
    "langfuse>=2.0.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",

    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Nacos config center
    "nacos-sdk-python>=0.1.14",

    # HTTP client (calls to internal Spring Cloud Gateway)
    "httpx>=0.27.0",

    # Redis (short-term memory + LangGraph checkpoint)
    "redis>=5.1.0",

    # Retry logic
    "tenacity>=9.0.0",

    # Structured logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
